2007-02-11, Version 3.11.2
	* plugin: Catch NULL-pointer and try to fix them. Otherwise the
	  NULL-pointer may have been passed to `printf' which causes a
	  segfault with some libcs.

2007-02-10, Version 3.11.1
	* df plugin: Some wrong defines have been fixed so the plugin works
	  under Solaris again.
	* dns plugin: The usage of a struct has been fixed to work with
	  non-GNU libcs.
	* processes plugin: Some missing defines have been added so the plugin
	  compiles cleanly under FreeBSD and presumably other UNIXes.

2006-12-22, Version 3.11.0
	* collectd: The new command line option `-P' makes it easier for
	  distributors to change the location of PID-files.
	* collectd: The daemon shuts down faster now which makes it easier to
	  write init.d-scripts for it.
	* apache plugin: Increase the buffersize to 16k, because the 4k buffer
	  caused problems every now and then.
	* df plugin: New config options allow to ignore certain mountpoints,
	  filesystem types or devices.
	* dns plugin: The new dns plugin uses `libpcap' to capture DNS traffic
	  and interprets it. It collects traffic as well as qtype, opcode and
	  rcode counts.
	* email plugin: Sebastian Harl has contributed this plugin which
	  counts received mails in categories (e. g. ham, spam, virus), spam
	  score (as given by SpamAssassin) and check types.
	* mbmon plugin: Flavio Stanchina has contributed this plugin which
	  uses `mbmon' to gather information from sensors on the motherboard.
	* processes plugin: Collect detailed statistics for configured
	  processes, that's process and thread count, CPU usage, resident
	  segment size and pagefaults.
	* multimeter plugin: Peter Holik contributed a new plugin which
	  queries multimeters.
	* sensors plugin: Lubos Stanek has put much effort into improving this
	  plugin, including `extended naming', collection of voltage values
	  and the possibility to ignore certain values.

2006-12-21, Version 3.10.4