@@ -1,3 +1,6 @@
+	* apache plugin: Support for lighttpd's `BusyServers' (aka.
+	connections) field was added by Florent Monbillard.
+
 2007-02-11, Version 3.11.2
 	* plugin: Catch NULL-pointer and try to fix them. Otherwise the
 	  NULL-pointer may have been passed to `printf' which causes a
